  [Michele Simionato]
  * Added a view displaying the calculation times by source typology
  * Fixed the test of GMPETable after the correction in hazardlib
  * Optimized the saving of the asset loss table
  * Fixed a bug with indices over the minimum IML when computing the loss
    ratios
  * Optimized the case of multiple assets of the same taxonomy on the
    same point and introduced a datastore view `assets_by_site`
  * Fixed HDF5 segmentation faults in the tests for Ubuntu 16.04

  [Daniele Viganò]
  * Added support for Ubuntu 16.04 (xenial) packages

  [Michele Simionato]
  * Optimized the case when the epsilons are not required, i.e. all the
    covariance coefficients are zero in the vulnerability functions
  * Added another test for event based risk (`case_miriam`)
  * Revisited the distribution mechanism and refined the weight of the
    ruptures in the event based calculators to avoid generating slow tasks
  * Added an automatic help for the subcommands of oq-lite and managed
    --version correctly
  * The event based risk calculator now use different seeds for different
    realizations; also, the performance has been substantially improved
  * Improved the .rst reports with data transfer information

  [Matteo Nastasi]
  * Backport of libhdf5 and h5py for ubuntu 'precise' serie

  [Michele Simionato]
  * Introduced filtering on the minimum intensity of the ground shaking
  * Solved the issue of serializing large SES collections, over the HDF5 limit
  * The loss maps and curves XML exporters now export the coordinates
    of the assets, not the coordinates of the closest hazard site
  * Stored the job.ini parameters into a table in the datastore
  * Added a check on the IMTs coming from the risk models
  * Changed the aggregate loss table exporter to export the event tags,
    not the event IDs
  * Fixed a bug with the CSV export of the ground motion fields
  * Fixed a bug with the export of UHS curves with `--exports=xml`