@@ -18,8 +18,11 @@
 
 from __future__ import print_function
 import logging
+import operator
+from openquake.baselib.general import groupby
 from openquake.baselib.performance import Monitor
 from openquake.commonlib import sap, nrml, readinput, reportwriter, datastore
+from openquake.commonlib.export import export
 from openquake.calculators import base
 from openquake.hazardlib import gsim
 
@@ -39,7 +42,7 @@ def print_csm_info(fname):
 
 # the documentation about how to use this feature can be found
 # in the file effective-realizations.rst
-def info(calculators, gsims, views, report, input_file=''):
+def info(calculators, gsims, views, exports, report, input_file=''):
     """
     Give information. You can pass the name of an available calculator,
     a job.ini file, or a zip archive with the input files.
@@ -54,6 +57,11 @@ def info(calculators, gsims, views, report, input_file=''):
     if views:
         for name in sorted(datastore.view):
             print(name)
+    if exports:
+        dic = groupby(export, operator.itemgetter(0),
+                      lambda group: [r[1] for r in group])
+        for exporter, formats in dic.items():
+            print(exporter, formats)
     if input_file.endswith('.xml'):
         print(nrml.read(input_file).to_str())
     elif input_file.endswith(('.ini', '.zip')):
@@ -71,5 +79,6 @@ parser = sap.Parser(info)
 parser.flg('calculators', 'list available calculators')
 parser.flg('gsims', 'list available GSIMs')
 parser.flg('views', 'list available views')
+parser.flg('exports', 'list available exports')
 parser.flg('report', 'build a report in rst format')
 parser.arg('input_file', 'job.ini file or zip archive')
