@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a command `oq-lite info --exports`
   * Added a view displaying the calculation times by source typology
   * Fixed the test of GMPETable after the correction in hazardlib
   * Optimized the saving of the asset loss table
